WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278301
[WebPush] Fix -Wmissing-designated-field-initializers warnings
https://bugs.webkit.org/show_bug.cgi?id=278301
Summary
[WebPush] Fix -Wmissing-designated-field-initializers warnings
David Kilzer (:ddkilzer)
Reported
2024-08-18 20:25:03 PDT
Fix -Wmissing-designated-field-initializers warnings in WebPush code. Example warnings: /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.mm:431:13: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] 431 | }; | ^ /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.mm:431:13: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.mm:400:154: note: while substituting into a lambda expression here 400 | m_connection.subscribe(topic, m_vapidPublicKey, [this, weakThis = WeakPtr { *this }, isRetry, topic](NSString *endpoint, NSError *error) mutable { | ^ In file included from /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.mm:27: In file included from /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.h:28: In file included from /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushServiceConnection.h:29: In file included from /private/var/build/Release/usr/local/include/wtf/CompletionHandler.h:30: /private/var/build/Release/usr/local/include/wtf/Function.h:53:39: note: in instantiation of function template specialization 'WebPushD::SubscribeRequest::startImpl(IsRetry)::(anonymous class)::operator()<std::optional<WebCore::PushRecord>>' requested here 53 | Out call(In... in) final { return m_callable(std::forward<In>(in)...); } | ^ /private/var/build/Release/usr/local/include/wtf/Function.h:47:7: note: in instantiation of member function 'WTF::Detail::CallableWrapper<(lambda at /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.mm:387:74), void, std::optional<WebCore::PushRecord> &&>::call' requested here 47 | class CallableWrapper : public CallableWrapperBase<Out, In...> { | ^ In file included from /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.mm:27: In file included from /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.h:28: In file included from /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushServiceConnection.h:29: /private/var/build/Release/usr/local/include/wtf/CompletionHandler.h:56:11: note: in instantiation of function template specialization 'WTF::Function<void (std::optional<WebCore::PushRecord> &&)>::Function<(lambda at /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.mm:387:74), void>' requested here 56 | : m_function(std::forward<CallableType>(callable)) | ^ /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.mm:387:74: note: in instantiation of function template specialization 'WTF::CompletionHandler<void (std::optional<WebCore::PushRecord> &&)>::CompletionHandler<(lambda at /Users/ddkilzer/Data/OpenSource/Source/WebKit/webpushd/PushService.mm:387:74), void>' requested here 387 | m_database.getRecordBySubscriptionSetAndScope(m_identifier, m_scope, [this, weakThis = WeakPtr { *this }, isRetry](auto&& result) mutable { | ^ 2 errors generated. In file included from /private/var/build/Release/DerivedSources/TestWebKitAPI/unified-sources/UnifiedSource40-mm.mm:5: /Users/ddkilzer/Data/OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:309:59: error: missing field 'bundleIdentifierOverride' initializer [-Werror,-Wmissing-designated-field-initializers] 309 | return { .hostAppAuditTokenData = WTFMove(auditToken) }; | ^ 1 error generated. /Users/ddkilzer/Data/OpenSource/Tools/TestWebKitAPI/Tests/WebCore/PushDatabase.cpp:221:5: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] 221 | }; | ^ /Users/ddkilzer/Data/OpenSource/Tools/TestWebKitAPI/Tests/WebCore/PushDatabase.cpp:232:5: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] 232 | }; | ^ /Users/ddkilzer/Data/OpenSource/Tools/TestWebKitAPI/Tests/WebCore/PushDatabase.cpp:244:5: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] 244 | }; | ^ /Users/ddkilzer/Data/OpenSource/Tools/TestWebKitAPI/Tests/WebCore/PushDatabase.cpp:255:5: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] 255 | }; | ^ /Users/ddkilzer/Data/OpenSource/Tools/TestWebKitAPI/Tests/WebCore/PushDatabase.cpp:270:5: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] 270 | }; | ^ /Users/ddkilzer/Data/OpenSource/Tools/TestWebKitAPI/Tests/WebCore/PushDatabase.cpp:285:5: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] 285 | }; | ^ /Users/ddkilzer/Data/OpenSource/Tools/TestWebKitAPI/Tests/WebCore/PushDatabase.cpp:300:5: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] 300 | }; | ^ /Users/ddkilzer/Data/OpenSource/Tools/TestWebKitAPI/Tests/WebCore/PushDatabase.cpp:856:9: error: missing field 'identifier' initializer [-Werror,-Wmissing-designated-field-initializers] 856 | }; | ^ 8 errors generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-18 20:25:18 PDT
<
rdar://problem/134222548
>
David Kilzer (:ddkilzer)
Comment 2
2024-08-18 20:31:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32373
David Kilzer (:ddkilzer)
Comment 3
2024-08-21 17:26:44 PDT
Committed
282584@main
(2a4cf93):
https://commits.webkit.org/282584@main
Reviewed commits have been landed. Closing PR #32373 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug