[WebPush] Fix -Wmissing-designated-field-initializers warnings <https://bugs.webkit.org/show_bug.cgi?id=278301> <rdar://134222548>

Reviewed by Ben Nham.

Ignore warnings for PushRecord and
WebPushD::WebPushDaemonConnectionConfiguration structs.

* Source/WebKit/webpushd/PushService.mm:
(WebPushD::SubscribeRequest::startImpl):
* Tools/TestWebKitAPI/Tests/WebCore/PushDatabase.cpp:
(TestWebKitAPI::TEST(PushDatabase, ManyInFlightOps)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:
(TestWebKitAPI::defaultWebPushDaemonConfiguration):

Canonical link: https://commits.webkit.org/282584@main